--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/cbmc"]
 	path = lib/cbmc
-	url = https://www.github.com:diffblue/cbmc.git
+	url = https://github.com/diffblue/cbmc.git
