--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.2)
 
+project(JBMC_SUPERBUILD)
+
 find_program(CCACHE_PROGRAM ccache)
 if(CCACHE_PROGRAM)
     set_property(GLOBAL PROPERTY RULE_LAUNCH_COMPILE "${CCACHE_PROGRAM}")
@@ -28,59 +30,24 @@ elseif("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
     #   config.inc doesn't seem to do that currently
 endif()
 
-set(enable_cbmc_tests on CACHE BOOL "Whether CBMC tests should be enabled")
+set(CMAKE_EXPORT_COMPILE_COMMANDS true)
 
 set(sat_impl "minisat2" CACHE STRING
     "This setting controls the SAT library which is used. Valid values are 'minisat2' and 'glucose'"
 )
 
+add_subdirectory(lib/cbmc)
+
 add_subdirectory(src)
 
-if(${enable_cbmc_tests})
-    enable_testing()
-endif()
+enable_testing()
 add_subdirectory(unit)
 add_subdirectory(regression)
 
 set_target_properties(
-    analyses
-    ansi-c
-    assembler
-    big-int
-    cbmc
-    cbmc-lib
-    clobber
-    clobber-lib
-    cpp
-    driver
-    goto-analyzer
-    goto-analyzer-lib
-    goto-cc
-    goto-cc-lib
-    goto-diff
-    goto-diff-lib
-    goto-instrument
-    goto-instrument-lib
-    goto-programs
-    goto-symex
-    java_bytecode
     jbmc
     jbmc-lib
-    jsil
-    json
-    langapi
-    linking
-    miniBDD
-    miniz
-    mmcc
-    pointer-analysis
-    solvers
-    string_utils
-    test-bigint
-    testing-utils
-    unit
-    util
-    xml
+    jbmc-unit
 
     PROPERTIES
     CXX_STANDARD 11
